--- a/style.css
+++ b/style.css
@@ -1,24 +1,118 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap");
 
 * {
   margin: 0;
   padding: 0;
-  font-family: "Finger Paint", cursive;
   box-sizing: border-box;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 body {
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
-  background: linear-gradient(to right, rgb(22, 14, 44), rgb(66, 23, 47));
+  background-color: #141e29;
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: "Poppins", sans-serif;
 }
 
 main {
   display: flex;
   flex-direction: column;
+  padding: 2rem;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.turn {
+  background-color: #253446;
+  height: 2.8rem;
+  width: 7rem;
+  border-radius: 10px;
+  font-size: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgb(213, 230, 236);
+  outline: none;
+  border: none;
+  box-shadow: 0px 4px 2px black;
+}
+
+.reset {
+  background-color: rgb(184, 218, 230);
+  font-size: 100%;
+  height: 2.8rem;
+  width: 4.7rem;
+  border-radius: 10px;
+  outline: none;
+  border: none;
+  box-shadow: 0px 4px rgb(83, 125, 141);
+}
+
+.game {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin-top: 2rem;
+  gap: 1.2rem;
+}
+
+.box {
+  font-family: "Finger Paint", cursive;
+  font-size: 500%;
+  height: 6.7rem;
+  width: 7rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #253446;
+  color: antiquewhite;
+  border-radius: 15px;
+  outline: none;
+  border: none;
+  box-shadow: 0px 5px 2px black;
+}
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 2rem;
+}
+
+.player {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 2rem;
+  width: 7rem;
+  border-radius: 10px;
+  padding: 2rem 0;
+  border: none;
+  outline: none;
+  font-weight: 500;
+  box-shadow: 0.7px 2px 4px black;
+}
+
+.X {
+  background-color: #5dc4d1;
+}
+
+.Draw {
+  background-color: rgb(184, 176, 176);
+}
+
+.O {
+  background-color: orange;
+}
+
+.score {
+  font-weight: 800;
+  font-size: 115%;
 }
