--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* overflow: hidden; */
 }
 
 body {
@@ -49,10 +48,6 @@ nav {
   color: #f2b137;
 }
 
-.X-text {
-  color: #31c3bd;
-}
-
 .turn {
   background-color: #253446;
   color: rgb(213, 230, 236);
@@ -78,11 +73,11 @@ nav {
   border: none;
   box-shadow: 0px 4px rgb(96, 125, 138);
   cursor: pointer;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.25s ease-in-out;
 }
 
 .reset:active {
-  background-color: black;
+  background-color: #566972;
 }
 
 .game {
@@ -107,7 +102,7 @@ nav {
   border: none;
   box-shadow: 0px 5px 2px black;
   cursor: pointer;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.25s ease-in;
 }
 
 .box:active:not(:disabled) {
