--- a/style.css
+++ b/style.css
@@ -20,7 +20,10 @@ body {
 main {
   display: flex;
   flex-direction: column;
-  padding: 2rem;
+  justify-content: center;
+  align-content: center;
+  max-height: 100%;
+  max-width: 100%;
 }
 
 nav {
