--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
 main {
   min-height: 100vh;
   max-width: 100%;
+  padding: 1.4rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
